Updating to MudBlazor

--- a/templates/Blazor/BlazorApp/BlazorApp/BlazorApp/Components/Account/Pages/ForgotPassword.razor
+++ b/templates/Blazor/BlazorApp/BlazorApp/BlazorApp/Components/Account/Pages/ForgotPassword.razor
@@ -14,24 +14,32 @@
 
 <PageTitle>Forgot your password?</PageTitle>
 
-<h1>Forgot your password?</h1>
-<h2>Enter your email.</h2>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<MudContainer MaxWidth="MaxWidth.Small" Class="my-4">
+    <MudPaper Elevation="2" Class="pa-4">
+        <MudText Typo="Typo.h4" Class="mb-2">Forgot your password?</MudText>
+        <MudText Typo="Typo.h6" Color="Color.Secondary" Class="mb-4">Enter your email.</MudText>
+        <MudDivider Class="mb-4" />
+        
         <EditForm Model="Input" FormName="forgot-password" OnValidSubmit="OnValidSubmitAsync" method="post">
             <DataAnnotationsValidator />
             <ValidationSummary class="text-danger" role="alert" />
 
-            <div class="form-floating mb-3">
-                <InputText @bind-Value="Input.Email" id="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label for="Input.Email" class="form-label">Email</label>
-                <ValidationMessage For="() => Input.Email" class="text-danger" />
-            </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Reset password</button>
+            <MudTextField @bind-Value="Input.Email" 
+                          For="@(() => Input.Email)"
+                          Label="Email" 
+                          Variant="Variant.Outlined"
+                          autocomplete="username"
+                          Required="true"
+                          Class="mb-4" />
+            
+            <MudButton Variant="Variant.Filled" 
+                       Color="Color.Primary" 
+                       Size="Size.Large"
+                       FullWidth="true"
+                       ButtonType="ButtonType.Submit">Reset password</MudButton>
         </EditForm>
-     </div>
-</div>
+    </MudPaper>
+</MudContainer>
 
 @code {
     [SupplyParameterFromForm]
