--- a/templates/Blazor/BlazorApp/BlazorApp/BlazorApp/Components/Account/Pages/Manage/ChangePassword.razor
+++ b/templates/Blazor/BlazorApp/BlazorApp/BlazorApp/Components/Account/Pages/Manage/ChangePassword.razor
@@ -11,32 +11,48 @@
 
 <PageTitle>Change password</PageTitle>
 
-<h3>Change password</h3>
+<MudText Typo="Typo.h4" Class="mb-4">Change password</MudText>
 <StatusMessage Message="@message" />
-<div class="row">
-    <div class="col-xl-6">
-        <EditForm Model="Input" FormName="change-password" OnValidSubmit="OnValidSubmitAsync" method="post">
-            <DataAnnotationsValidator />
-            <ValidationSummary class="text-danger" role="alert" />
-            <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.OldPassword" id="Input.OldPassword" class="form-control" autocomplete="current-password" aria-required="true" placeholder="Enter the old password" />
-                <label for="Input.OldPassword" class="form-label">Old password</label>
-                <ValidationMessage For="() => Input.OldPassword" class="text-danger" />
-            </div>
-            <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.NewPassword" id="Input.NewPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Enter the new password" />
-                <label for="Input.NewPassword" class="form-label">New password</label>
-                <ValidationMessage For="() => Input.NewPassword" class="text-danger" />
-            </div>
-            <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.ConfirmPassword" id="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Enter the new password" />
-                <label for="Input.ConfirmPassword" class="form-label">Confirm password</label>
-                <ValidationMessage For="() => Input.ConfirmPassword" class="text-danger" />
-            </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Update password</button>
-        </EditForm>
-    </div>
-</div>
+
+<MudPaper Elevation="2" Class="pa-4" Style="max-width: 600px;">
+    <EditForm Model="Input" FormName="change-password" OnValidSubmit="OnValidSubmitAsync" method="post">
+        <DataAnnotationsValidator />
+        <ValidationSummary class="text-danger" role="alert" />
+        
+        <MudTextField @bind-Value="Input.OldPassword" 
+                      For="@(() => Input.OldPassword)"
+                      Label="Old password" 
+                      Variant="Variant.Outlined"
+                      InputType="InputType.Password"
+                      autocomplete="current-password"
+                      Required="true"
+                      Class="mb-4" />
+        
+        <MudTextField @bind-Value="Input.NewPassword" 
+                      For="@(() => Input.NewPassword)"
+                      Label="New password" 
+                      Variant="Variant.Outlined"
+                      InputType="InputType.Password"
+                      autocomplete="new-password"
+                      Required="true"
+                      Class="mb-4" />
+        
+        <MudTextField @bind-Value="Input.ConfirmPassword" 
+                      For="@(() => Input.ConfirmPassword)"
+                      Label="Confirm password" 
+                      Variant="Variant.Outlined"
+                      InputType="InputType.Password"
+                      autocomplete="new-password"
+                      Required="true"
+                      Class="mb-4" />
+        
+        <MudButton Variant="Variant.Filled" 
+                   Color="Color.Primary" 
+                   Size="Size.Large"
+                   FullWidth="true"
+                   ButtonType="ButtonType.Submit">Update password</MudButton>
+    </EditForm>
+</MudPaper>
 
 @code {
     private string? message;
