--- a/templates/Blazor/BlazorApp/BlazorApp/BlazorApp/Components/Account/Pages/Register.razor
+++ b/templates/Blazor/BlazorApp/BlazorApp/BlazorApp/Components/Account/Pages/Register.razor
@@ -17,42 +17,61 @@
 
 <PageTitle>Register</PageTitle>
 
-<h1>Register</h1>
-
-<div class="row">
-    <div class="col-lg-6">
-        <StatusMessage Message="@Message" />
-        <EditForm Model="Input" method="post" OnValidSubmit="RegisterUser" FormName="register">
-            <DataAnnotationsValidator />
-            <h2>Create a new account.</h2>
-            <hr />
-            <ValidationSummary class="text-danger" role="alert" />
-            <div class="form-floating mb-3">
-                <InputText @bind-Value="Input.Email" id="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label for="Input.Email">Email</label>
-                <ValidationMessage For="() => Input.Email" class="text-danger" />
-            </div>
-            <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.Password" id="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label for="Input.Password">Password</label>
-                <ValidationMessage For="() => Input.Password" class="text-danger" />
-            </div>
-            <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.ConfirmPassword" id="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label for="Input.ConfirmPassword">Confirm Password</label>
-                <ValidationMessage For="() => Input.ConfirmPassword" class="text-danger" />
-            </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
-        </EditForm>
-    </div>
-    <div class="col-lg-4 col-lg-offset-2">
-        <section>
-            <h3>Use another service to register.</h3>
-            <hr />
-            <ExternalLoginPicker />
-        </section>
-    </div>
-</div>
+<MudContainer MaxWidth="MaxWidth.Medium" Class="my-4">
+    <MudText Typo="Typo.h3" Class="mb-4">Register</MudText>
+    <MudGrid>
+        <MudItem xs="12" md="7">
+            <MudPaper Elevation="2" Class="pa-4">
+                <StatusMessage Message="@Message" />
+                <EditForm Model="Input" method="post" OnValidSubmit="RegisterUser" FormName="register">
+                    <DataAnnotationsValidator />
+                    <MudText Typo="Typo.h6" Class="mb-3">Create a new account.</MudText>
+                    <MudDivider Class="mb-4" />
+                    <ValidationSummary class="text-danger" role="alert" />
+                    
+                    <MudTextField @bind-Value="Input.Email" 
+                                  For="@(() => Input.Email)"
+                                  Label="Email" 
+                                  Variant="Variant.Outlined"
+                                  autocomplete="username"
+                                  Required="true"
+                                  Class="mb-4" />
+                    
+                    <MudTextField @bind-Value="Input.Password" 
+                                  For="@(() => Input.Password)"
+                                  Label="Password" 
+                                  Variant="Variant.Outlined"
+                                  InputType="InputType.Password"
+                                  autocomplete="new-password"
+                                  Required="true"
+                                  Class="mb-4" />
+                    
+                    <MudTextField @bind-Value="Input.ConfirmPassword" 
+                                  For="@(() => Input.ConfirmPassword)"
+                                  Label="Confirm Password" 
+                                  Variant="Variant.Outlined"
+                                  InputType="InputType.Password"
+                                  autocomplete="new-password"
+                                  Required="true"
+                                  Class="mb-4" />
+                    
+                    <MudButton Variant="Variant.Filled" 
+                               Color="Color.Primary" 
+                               Size="Size.Large"
+                               FullWidth="true"
+                               ButtonType="ButtonType.Submit">Register</MudButton>
+                </EditForm>
+            </MudPaper>
+        </MudItem>
+        <MudItem xs="12" md="5">
+            <MudPaper Elevation="2" Class="pa-4">
+                <MudText Typo="Typo.h6" Class="mb-3">Use another service to register.</MudText>
+                <MudDivider Class="mb-4" />
+                <ExternalLoginPicker />
+            </MudPaper>
+        </MudItem>
+    </MudGrid>
+</MudContainer>
 
 @code {
     private IEnumerable<IdentityError>? identityErrors;
