--- a/templates/Blazor/BlazorApp/BlazorApp/BlazorApp/Components/Account/Shared/StatusMessage.razor
+++ b/templates/Blazor/BlazorApp/BlazorApp/BlazorApp/Components/Account/Shared/StatusMessage.razor
@@ -1,9 +1,9 @@
 ﻿@if (!string.IsNullOrEmpty(DisplayMessage))
 {
-    var statusMessageClass = DisplayMessage.StartsWith("Error") ? "danger" : "success";
-    <div class="alert alert-@statusMessageClass" role="alert">
+    var severity = DisplayMessage.StartsWith("Error") ? Severity.Error : Severity.Success;
+    <MudAlert Severity="@severity" Class="mb-4">
         @DisplayMessage
-    </div>
+    </MudAlert>
 }
 
 @code {
