--- a/templates/Blazor/BlazorApp/BlazorApp/BlazorApp/Components/_Imports.razor
+++ b/templates/Blazor/BlazorApp/BlazorApp/BlazorApp/Components/_Imports.razor
@@ -11,5 +11,4 @@
 @using BlazorApp.Client
 @using BlazorApp.Components
 @using BlazorApp.Components.Layout
-@using Radzen
-@using Radzen.Blazor
+@using MudBlazor
