--- a/templates/Blazor/BlazorApp/BlazorApp/BlazorApp.Client/_Imports.razor
+++ b/templates/Blazor/BlazorApp/BlazorApp/BlazorApp.Client/_Imports.razor
@@ -8,5 +8,4 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using BlazorApp.Client
-@using Radzen
-@using Radzen.Blazor
+@using MudBlazor
