--- a/templates/Blazor/BlazorApp/BlazorApp/BlazorApp/Components/Account/Shared/ManageLayout.razor
+++ b/templates/Blazor/BlazorApp/BlazorApp/BlazorApp/Components/Account/Shared/ManageLayout.razor
@@ -1,17 +1,16 @@
 ﻿@inherits LayoutComponentBase
 @layout BlazorApp.Components.Layout.MainLayout
 
-<h1>Manage your account</h1>
-
-<div>
-    <h2>Change your account settings</h2>
-    <hr />
-    <div class="row">
-        <div class="col-lg-3">
+<MudContainer MaxWidth="MaxWidth.Large" Class="my-4">
+    <MudText Typo="Typo.h3" Class="mb-2">Manage your account</MudText>
+    <MudText Typo="Typo.h6" Color="Color.Secondary" Class="mb-4">Change your account settings</MudText>
+    <MudDivider Class="mb-4" />
+    <MudGrid>
+        <MudItem xs="12" md="3">
             <ManageNavMenu />
-        </div>
-        <div class="col-lg-9">
+        </MudItem>
+        <MudItem xs="12" md="9">
             @Body
-        </div>
-    </div>
-</div>
+        </MudItem>
+    </MudGrid>
+</MudContainer>
